--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     
 </div>
 <div class="pagination-wrapper">
-    <button> '1' </button>
-    <button> '2' </button>
-    <button> '3' </button>
-    <button> '4' </button>
-    <button> '5' </button>
+    <!-- <button class="page-number"> 1 </button>
+    <button class="page-number"> 2 </button>
+    <button class="page-number"> 3 </button>
+    <button class="page-number"> 4 </button>
+    <button class="page-number"> 5 </button> -->
 </div>
 
 
